--- a/mapApp/mapApp/en.lproj/MainStoryboard.storyboard
+++ b/mapApp/mapApp/en.lproj/MainStoryboard.storyboard
@@ -9,22 +9,137 @@
             <objects>
                 <viewController title="First" id="2" customClass="MapViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="16">
-                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lJW-ba-0OA"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Speed" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1e-36-Oyt">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="52" id="LpU-8Y-aUR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="lat" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0TB-L7-u0d">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="129" id="z8J-rZ-rHg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="long" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sYa-Hd-fn3">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="129" id="14a-ET-AET"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bke-o1-oKX">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="ME">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="zoomToMe:" destination="2" eventType="touchUpInside" id="XTq-sR-03O"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O2n-h0-JCC">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="94" id="SGr-QV-5nE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Toggle ME">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="toggleLocationOnMap:" destination="2" eventType="touchUpInside" id="w01-LA-3xZ"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="test" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bgj-BM-hvL">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="owO-Ka-YcA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wtL-dz-U2w">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="36" id="S4m-fX-KNb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="+">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="zoomChange:" destination="2" eventType="touchUpInside" id="7RO-O1-Ptp"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bua-3F-uvT">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="36" id="TUI-eI-vQv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="-">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="zoomChange:" destination="2" eventType="touchUpInside" id="c5f-lj-k3M"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="bgj-BM-hvL" firstAttribute="centerX" secondItem="r1e-36-Oyt" secondAttribute="centerX" type="default" id="2KW-9C-RJ3"/>
                             <constraint firstItem="lJW-ba-0OA" firstAttribute="bottom" secondItem="16" secondAttribute="bottom" type="default" id="B65-hb-hZY"/>
+                            <constraint firstItem="wtL-dz-U2w" firstAttribute="leading" secondItem="bua-3F-uvT" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Bs7-rk-F1u"/>
+                            <constraint firstAttribute="bottom" secondItem="bua-3F-uvT" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="EbH-GG-HE5"/>
                             <constraint firstItem="lJW-ba-0OA" firstAttribute="trailing" secondItem="16" secondAttribute="trailing" type="default" id="Hb9-tm-iYq"/>
+                            <constraint firstAttribute="bottom" secondItem="O2n-h0-JCC" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="IPc-zW-blA"/>
+                            <constraint firstAttribute="bottom" secondItem="bke-o1-oKX" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="Ny8-Pl-gIJ"/>
+                            <constraint firstItem="O2n-h0-JCC" firstAttribute="leading" secondItem="bke-o1-oKX" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="SSd-h9-bJk"/>
+                            <constraint firstAttribute="bottom" secondItem="wtL-dz-U2w" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="UCk-Gk-dRT"/>
                             <constraint firstItem="lJW-ba-0OA" firstAttribute="leading" secondItem="16" secondAttribute="leading" type="default" id="VnB-xe-bPC"/>
+                            <constraint firstAttribute="trailing" secondItem="wtL-dz-U2w" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="YaB-it-M4t"/>
                             <constraint firstItem="lJW-ba-0OA" firstAttribute="top" secondItem="16" secondAttribute="top" type="default" id="bQl-ik-BFb"/>
+                            <constraint firstItem="sYa-Hd-fn3" firstAttribute="baseline" secondItem="0TB-L7-u0d" secondAttribute="baseline" type="default" id="egc-Rl-qmd"/>
+                            <constraint firstItem="r1e-36-Oyt" firstAttribute="top" secondItem="16" secondAttribute="top" constant="20" symbolic="YES" type="default" id="fxa-ad-l3z"/>
+                            <constraint firstAttribute="trailing" secondItem="sYa-Hd-fn3" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="fxm-it-BiI"/>
+                            <constraint firstItem="bke-o1-oKX" firstAttribute="leading" secondItem="16" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="fyW-Lq-fjU"/>
+                            <constraint firstAttribute="bottom" secondItem="bgj-BM-hvL" secondAttribute="bottom" constant="144" id="gRJ-Xc-oKO"/>
+                            <constraint firstItem="0TB-L7-u0d" firstAttribute="leading" secondItem="16" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="slB-ze-Kay"/>
+                            <constraint firstItem="sYa-Hd-fn3" firstAttribute="top" secondItem="r1e-36-Oyt" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="vG0-yP-h4b"/>
+                            <constraint firstItem="bgj-BM-hvL" firstAttribute="centerX" secondItem="lJW-ba-0OA" secondAttribute="centerX" type="default" id="wLB-kL-ZRd"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Map" image="first" id="7"/>
                     <connections>
+                        <outlet property="latLabel" destination="0TB-L7-u0d" id="TRl-fs-GQe"/>
+                        <outlet property="longLabel" destination="sYa-Hd-fn3" id="lBP-A0-5Sl"/>
                         <outlet property="mapView" destination="lJW-ba-0OA" id="oNt-Sx-265"/>
+                        <outlet property="speedLabel" destination="r1e-36-Oyt" id="HKw-4i-P1M"/>
+                        <outlet property="testLabel" destination="bgj-BM-hvL" id="xGm-ka-FlC"/>
+                        <outlet property="zoomInButton" destination="wtL-dz-U2w" id="h1r-K1-0Cb"/>
+                        <outlet property="zoomOutButton" destination="bua-3F-uvT" id="hMT-Ja-hP1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="10" sceneMemberID="firstResponder"/>
@@ -36,7 +151,7 @@
             <objects>
                 <viewController title="Second" id="3" customClass="SecondViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="17">
-                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Second View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="22">
@@ -93,23 +208,9 @@
         <image name="first" width="16" height="16"/>
         <image name="second" width="16" height="16"/>
     </resources>
-    <classes>
-        <class className="MapViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="SecondViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SecondViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
