--- a/mapApp/mapApp/en.lproj/MainStoryboard.storyboard
+++ b/mapApp/mapApp/en.lproj/MainStoryboard.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" useAutolayout="YES" initialViewController="4">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment defaultVersion="1552" identifier="iOS"/>
+        <development version="4600" identifier="xcode"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
         <!--Map View Controller - First-->
@@ -12,8 +14,11 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lJW-ba-0OA"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lJW-ba-0OA">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="411"/>
+                            </mapView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Speed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1e-36-Oyt">
+                                <rect key="frame" x="77" y="20" width="166" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="166" id="pfh-5W-URe"/>
                                 </constraints>
@@ -22,6 +27,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="lat" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0TB-L7-u0d">
+                                <rect key="frame" x="20" y="49" width="129" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="129" id="z8J-rZ-rHg"/>
                                 </constraints>
@@ -30,17 +36,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="long" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sYa-Hd-fn3">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="129" id="14a-ET-AET"/>
-                                </constraints>
+                                <rect key="frame" x="171" y="49" width="129" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bke-o1-oKX">
+                                <rect key="frame" x="20" y="273" width="47" height="44"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="ME">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted">
@@ -51,12 +56,13 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O2n-h0-JCC">
+                                <rect key="frame" x="77" y="273" width="94" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="94" id="SGr-QV-5nE"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Toggle ME">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted">
@@ -67,6 +73,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="test" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bgj-BM-hvL">
+                                <rect key="frame" x="139" y="246" width="42" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="42" id="owO-Ka-YcA"/>
                                 </constraints>
@@ -75,12 +82,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wtL-dz-U2w">
+                                <rect key="frame" x="264" y="273" width="36" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="36" id="S4m-fX-KNb"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="+">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted">
@@ -91,12 +99,13 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bua-3F-uvT">
+                                <rect key="frame" x="217" y="273" width="36" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="36" id="TUI-eI-vQv"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="-">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted">
@@ -109,26 +118,27 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="bgj-BM-hvL" secondAttribute="bottom" constant="144" id="9SI-d2-rKI"/>
                             <constraint firstItem="lJW-ba-0OA" firstAttribute="bottom" secondItem="16" secondAttribute="bottom" type="default" id="B65-hb-hZY"/>
-                            <constraint firstItem="wtL-dz-U2w" firstAttribute="leading" secondItem="bua-3F-uvT" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Bs7-rk-F1u"/>
-                            <constraint firstAttribute="bottom" secondItem="bua-3F-uvT" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="EbH-GG-HE5"/>
+                            <constraint firstAttribute="bottom" secondItem="O2n-h0-JCC" secondAttribute="bottom" constant="95" id="Cij-6n-OvO"/>
                             <constraint firstItem="lJW-ba-0OA" firstAttribute="trailing" secondItem="16" secondAttribute="trailing" type="default" id="Hb9-tm-iYq"/>
-                            <constraint firstAttribute="bottom" secondItem="O2n-h0-JCC" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="IPc-zW-blA"/>
-                            <constraint firstAttribute="bottom" secondItem="bke-o1-oKX" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="Ny8-Pl-gIJ"/>
-                            <constraint firstItem="O2n-h0-JCC" firstAttribute="leading" secondItem="bke-o1-oKX" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="SSd-h9-bJk"/>
-                            <constraint firstAttribute="bottom" secondItem="wtL-dz-U2w" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="UCk-Gk-dRT"/>
+                            <constraint firstItem="O2n-h0-JCC" firstAttribute="leading" secondItem="r1e-36-Oyt" secondAttribute="leading" type="default" id="I9e-T2-Pjz"/>
+                            <constraint firstItem="bgj-BM-hvL" firstAttribute="centerX" secondItem="lJW-ba-0OA" secondAttribute="centerX" type="default" id="ITp-W7-I9T"/>
+                            <constraint firstItem="O2n-h0-JCC" firstAttribute="baseline" secondItem="bke-o1-oKX" secondAttribute="baseline" type="default" id="Qtc-8E-alU"/>
                             <constraint firstItem="lJW-ba-0OA" firstAttribute="leading" secondItem="16" secondAttribute="leading" type="default" id="VnB-xe-bPC"/>
-                            <constraint firstAttribute="trailing" secondItem="wtL-dz-U2w" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="YaB-it-M4t"/>
+                            <constraint firstItem="wtL-dz-U2w" firstAttribute="baseline" secondItem="bua-3F-uvT" secondAttribute="baseline" type="default" id="X1J-7W-KBn"/>
+                            <constraint firstItem="wtL-dz-U2w" firstAttribute="trailing" secondItem="sYa-Hd-fn3" secondAttribute="trailing" type="default" id="YK5-mq-okq"/>
+                            <constraint firstItem="bke-o1-oKX" firstAttribute="leading" secondItem="0TB-L7-u0d" secondAttribute="leading" type="default" id="Zdp-zK-QMx"/>
                             <constraint firstItem="lJW-ba-0OA" firstAttribute="top" secondItem="16" secondAttribute="top" type="default" id="bQl-ik-BFb"/>
-                            <constraint firstItem="r1e-36-Oyt" firstAttribute="centerX" secondItem="lJW-ba-0OA" secondAttribute="centerX" type="default" id="btA-iZ-rTd"/>
+                            <constraint firstAttribute="trailing" secondItem="wtL-dz-U2w" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="eQT-Xe-Bk0"/>
                             <constraint firstItem="sYa-Hd-fn3" firstAttribute="baseline" secondItem="0TB-L7-u0d" secondAttribute="baseline" type="default" id="egc-Rl-qmd"/>
                             <constraint firstItem="r1e-36-Oyt" firstAttribute="top" secondItem="16" secondAttribute="top" constant="20" symbolic="YES" type="default" id="fxa-ad-l3z"/>
-                            <constraint firstAttribute="trailing" secondItem="sYa-Hd-fn3" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="fxm-it-BiI"/>
-                            <constraint firstItem="bke-o1-oKX" firstAttribute="leading" secondItem="16" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="fyW-Lq-fjU"/>
-                            <constraint firstAttribute="bottom" secondItem="bgj-BM-hvL" secondAttribute="bottom" constant="144" id="gRJ-Xc-oKO"/>
                             <constraint firstItem="0TB-L7-u0d" firstAttribute="top" secondItem="r1e-36-Oyt" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="lcm-7y-av5"/>
+                            <constraint firstItem="bua-3F-uvT" firstAttribute="centerX" secondItem="sYa-Hd-fn3" secondAttribute="centerX" type="default" id="sDR-JY-2qO"/>
                             <constraint firstItem="0TB-L7-u0d" firstAttribute="leading" secondItem="16" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="slB-ze-Kay"/>
                             <constraint firstItem="r1e-36-Oyt" firstAttribute="centerX" secondItem="bgj-BM-hvL" secondAttribute="centerX" type="default" id="vX8-dr-UiH"/>
+                            <constraint firstAttribute="trailing" secondItem="bua-3F-uvT" secondAttribute="trailing" constant="67" id="wzb-2v-njz"/>
+                            <constraint firstItem="O2n-h0-JCC" firstAttribute="baseline" secondItem="bua-3F-uvT" secondAttribute="baseline" type="default" id="y9k-GR-teJ"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Map" image="first" id="7"/>
@@ -155,12 +165,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Second View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="22">
+                                <rect key="frame" x="20" y="80" width="280" height="42"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" delaysContentTouches="NO" canCancelContentTouches="NO" minimumZoomScale="0.0" maximumZoomScale="0.0" bouncesZoom="NO" editable="NO" text="Loaded by the second view controller — an instance of SecondViewController — specified in the app delegate." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="23">
+                                <rect key="frame" x="20" y="162" width="280" height="88"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="88" id="cQR-IW-sY8"/>
                                 </constraints>
@@ -208,26 +220,6 @@
         <image name="first" width="16" height="16"/>
         <image name="second" width="16" height="16"/>
     </resources>
-    <classes>
-        <class className="MapViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="toggleLocationOnMap:"/>
-                <relationship kind="action" name="zoomChange:"/>
-                <relationship kind="action" name="zoomToMe:"/>
-                <relationship kind="outlet" name="latLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="longLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-                <relationship kind="outlet" name="speedLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="testLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="zoomInButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="zoomOutButton" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
